--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "express": "^4.17.1",
     "knex": "^0.19.0",
     "sqlite3": "^4.0.9"
+  },
+  "devDependencies": {
+    "eslint": "^6.0.1"
   }
 }
