--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/daquinons/node-db-challenge#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "helmet": "^3.19.0",
     "knex": "^0.19.0",
+    "morgan": "^1.9.1",
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
